Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             </div>
 
             <div class="study-controls">
-              <button id="wrongBtn" class="danger large">Fel (vänster)</button>
-              <button id="rightBtn" class="primary large">Rätt (höger)</button>
+              <button id="wrongBtn" class="danger large">Fel</button>
+              <button id="rightBtn" class="primary large">Rätt</button>
             </div>
 
             <div id="studyFinished" class="study-finished hidden">
@@ -173,3 +173,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
