--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Flashcards med bilder</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -173,4 +173,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
