Refactor index.html for improved layout and functionality
Updated the structure and content of the flashcards application, including changes to the home view, course view, and study view sections.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <title>Flashcards med bilder</title>
+  <title>Flashcards</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,84 +13,87 @@
     </header>
 
     <main class="main">
-      <section class="sidebar">
-        <div class="section-header">
-          <h2>Mappar (kurser)</h2>
-          <button id="addCourseBtn" class="btn btn-primary btn-sm">+ Ny mapp</button>
+      <!-- HEMSKÄRM: bara mappar -->
+      <section id="homeView" class="home-view">
+        <div class="home-header">
+          <div>
+            <h2>Mina mappar</h2>
+            <p class="home-subtitle">Välj en kurs eller skapa en ny mapp.</p>
+          </div>
+          <button id="addCourseBtn" class="btn btn-primary">+ Ny mapp</button>
         </div>
+
+        <div id="homeEmpty" class="empty-state">
+          <p>Du har inga mappar ännu. Skapa en ny för att börja.</p>
+        </div>
+
         <ul id="courseList" class="course-list"></ul>
       </section>
 
-      <section class="content">
-        <div id="noCourseSelected" class="empty-state">
-          <p>Välj en mapp till vänster eller skapa en ny.</p>
-        </div>
-
-        <div id="courseView" class="course-view hidden">
-          <div class="course-header">
+      <!-- KURSSKÄRM: flashcards i en mapp -->
+      <section id="courseView" class="course-view hidden">
+        <div class="course-header">
+          <div class="course-header-left">
+            <button id="backHomeBtn" class="btn btn-secondary btn-sm">← Till mappar</button>
             <h2 id="courseTitle"></h2>
-            <div class="course-actions">
-              <button id="studyBtn" class="btn btn-primary">Öva</button>
-              <button id="addCardBtn" class="btn btn-secondary">+ Nytt flashcard</button>
-              <button id="deleteCourseBtn" class="btn btn-danger">Ta bort mapp</button>
-            </div>
           </div>
-
-          <div id="cardListContainer">
-            <table class="card-table">
-              <thead>
-                <tr>
-                  <th>Fråga</th>
-                  <th>Svar (text)</th>
-                  <th>Bild?</th>
-                  <th>Åtgärder</th>
-                </tr>
-              </thead>
-              <tbody id="cardList"></tbody>
-            </table>
-            <div id="noCardsMessage" class="empty-state small">
-              <p>Inga flashcards ännu. Skapa ett nytt!</p>
-            </div>
+          <div class="course-actions">
+            <button id="studyBtn" class="btn btn-primary">Öva</button>
+            <button id="addCardBtn" class="btn btn-secondary">+ Nytt flashcard</button>
+            <button id="deleteCourseBtn" class="btn btn-danger">Ta bort mapp</button>
           </div>
         </div>
 
-        <div id="studyView" class="study-view hidden">
-          <div class="study-header">
-            <button id="backToCourseBtn" class="btn btn-secondary btn-sm">← Tillbaka</button>
-            <div class="study-info">
-              <span id="studyProgress"></span>
-              <button id="restartStudyBtn" class="btn btn-secondary btn-sm">Börja om flashcards</button>
-            </div>
+        <div id="cardListContainer">
+          <table class="card-table">
+            <thead>
+              <tr>
+                <th>Fråga</th>
+                <th>Svar (text)</th>
+                <th>Bild?</th>
+                <th>Åtgärder</th>
+              </tr>
+            </thead>
+            <tbody id="cardList"></tbody>
+          </table>
+          <div id="noCardsMessage" class="empty-state small">
+            <p>Inga flashcards ännu. Skapa ett nytt!</p>
           </div>
+        </div>
+      </section>
 
-          <div id="studyCardContainer" class="study-card-container">
-            <div id="studyCard" class="study-card">
-              <div id="studyCardInner" class="study-card-inner">
-                <div class="study-card-face study-card-front">
-                  <div id="studyQuestion" class="study-question"></div>
-                  <div class="study-hint">Tryck för att visa svaret.</div>
+      <!-- STUDYSKÄRM: ett kort i taget -->
+      <section id="studyView" class="study-view hidden">
+        <div class="study-header">
+          <button id="backToCourseBtn" class="btn btn-secondary btn-sm">← Till mappen</button>
+          <div class="study-info">
+            <span id="studyProgress"></span>
+            <button id="restartStudyBtn" class="btn btn-secondary btn-sm">Börja om flashcards</button>
+          </div>
+        </div>
+
+        <div id="studyCardContainer" class="study-card-container">
+          <div id="studyCard" class="study-card">
+            <div id="studyCardInner" class="study-card-inner">
+              <div class="study-card-face study-card-front">
+                <div id="studyQuestion" class="study-question"></div>
+                <div class="study-hint">Tryck för att vända kortet.</div>
+              </div>
+              <div class="study-card-face study-card-back">
+                <div id="studyAnswerContainer" class="study-answer-container">
+                  <div id="studyAnswerText" class="study-answer-text"></div>
+                  <img id="studyAnswerImage" class="study-answer-image hidden" alt="Svarbild">
                 </div>
-                <div class="study-card-face study-card-back">
-                  <div id="studyAnswerContainer" class="study-answer-container">
-                    <div id="studyAnswerText" class="study-answer-text"></div>
-                    <img id="studyAnswerImage" class="study-answer-image hidden" alt="Svarbild">
-                  </div>
-                  <div class="study-hint">Tryck för att visa frågan.</div>
-                </div>
+                <div class="study-hint">Tryck för att se frågan igen.</div>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="study-controls">
-            <button id="wrongBtn" class="btn btn-danger btn-lg">Fel (vänster)</button>
-            <button id="rightBtn" class="btn btn-primary btn-lg">Rätt (höger)</button>
-          </div>
-
-          <div id="studyFinished" class="study-finished hidden">
-            <h3>Klart!</h3>
-            <p id="studyFinishedText"></p>
-            <button id="studyRestartAllBtn" class="btn btn-primary">Börja om alla flashcards</button>
-          </div>
+        <div id="studyFinished" class="study-finished hidden">
+          <h3>Klart!</h3>
+          <p id="studyFinishedText"></p>
+          <button id="studyRestartAllBtn" class="btn btn-primary">Börja om alla flashcards</button>
         </div>
       </section>
     </main>
