--- a/index.html
+++ b/index.html
@@ -11,111 +11,165 @@
   </head>
   <body>
     <div class="app">
-      <header class="header">
-        <h1>Flashcards</h1>
-      </header>
+      <!-- LOGIN-VY -->
+      <section id="loginView" class="login-view">
+        <div class="login-card">
+          <h2>Logga in</h2>
+          <p class="login-subtitle">Endast för dig 💙</p>
 
-      <main class="main">
-        <!-- HEMSKÄRM: bara mappar -->
-        <section id="homeView" class="home-view">
-          <div class="home-header">
-            <div>
-              <h2>Mina mappar</h2>
-              <p class="home-subtitle">Välj en kurs eller skapa en ny mapp.</p>
+          <label>
+            E-post:
+            <input type="email" id="loginEmail" placeholder="din e-post" />
+          </label>
+
+          <label>
+            Lösenord:
+            <input
+              type="password"
+              id="loginPassword"
+              placeholder="ditt lösenord"
+            />
+          </label>
+
+          <div id="loginError" class="login-error hidden">
+            Fel e-post eller lösenord.
+          </div>
+
+          <button id="loginBtn" class="btn btn-primary">Logga in</button>
+        </div>
+      </section>
+
+      <!-- RESTEN AV APPEN (göms tills man är inloggad) -->
+      <div id="appContainer" class="hidden">
+        <header class="header">
+          <h1>Flashcards</h1>
+        </header>
+
+        <main class="main">
+          <!-- HEMSKÄRM: bara mappar -->
+          <section id="homeView" class="home-view">
+            <div class="home-header">
+              <div>
+                <h2>Mina mappar</h2>
+                <p class="home-subtitle">
+                  Välj en kurs eller skapa en ny mapp.
+                </p>
+              </div>
+              <div class="home-actions">
+                <button id="addCourseBtn" class="btn btn-primary">
+                  + Ny mapp
+                </button>
+
+                <button id="exportDataBtn" class="btn btn-secondary btn-sm">
+                  Exportera backup
+                </button>
+
+                <label class="btn btn-secondary btn-sm file-btn">
+                  Importera backup
+                  <input
+                    type="file"
+                    id="importDataInput"
+                    accept=".json,.txt"
+                    hidden
+                  />
+                </label>
+              </div>
             </div>
-            <button id="addCourseBtn" class="btn btn-primary">+ Ny mapp</button>
-          </div>
 
-          <div id="homeEmpty" class="empty-state">
-            <p>Du har inga mappar ännu. Skapa en ny för att börja.</p>
-          </div>
+            <div id="homeEmpty" class="empty-state">
+              <p>Du har inga mappar ännu. Skapa en ny för att börja.</p>
+            </div>
 
-          <ul id="courseList" class="course-list"></ul>
-        </section>
+            <ul id="courseList" class="course-list"></ul>
+          </section>
 
-        <!-- KURSSKÄRM: flashcards i en mapp -->
-        <section id="courseView" class="course-view hidden">
-          <div class="course-header">
-            <div class="course-header-left">
-              <button id="backHomeBtn" class="btn btn-secondary btn-sm">
-                ← Till mappar
+          <!-- KURSSKÄRM: flashcards i en mapp -->
+          <section id="courseView" class="course-view hidden">
+            <div class="course-header">
+              <div class="course-header-left">
+                <button id="backHomeBtn" class="btn btn-secondary btn-sm">
+                  ← Till mappar
+                </button>
+                <h2 id="courseTitle"></h2>
+              </div>
+              <div class="course-actions">
+                <button id="studyBtn" class="btn btn-primary">Öva</button>
+                <button id="addCardBtn" class="btn btn-secondary">
+                  + Nytt flashcard
+                </button>
+                <button id="deleteCourseBtn" class="btn btn-danger">
+                  Ta bort mapp
+                </button>
+              </div>
+            </div>
+
+            <div id="cardListContainer">
+              <table class="card-table">
+                <thead>
+                  <tr>
+                    <th>Fråga</th>
+                    <th>Svar (text)</th>
+                    <th>Bild?</th>
+                    <th>Åtgärder</th>
+                  </tr>
+                </thead>
+                <tbody id="cardList"></tbody>
+              </table>
+              <div id="noCardsMessage" class="empty-state small">
+                <p>Inga flashcards ännu. Skapa ett nytt!</p>
+              </div>
+            </div>
+          </section>
+
+          <!-- STUDYSKÄRM: ett kort i taget -->
+          <section id="studyView" class="study-view hidden">
+            <div class="study-header">
+              <button id="backToCourseBtn" class="btn btn-secondary btn-sm">
+                ← Till mappen
               </button>
-              <h2 id="courseTitle"></h2>
+              <div class="study-info">
+                <span id="studyProgress"></span>
+                <button id="restartStudyBtn" class="btn btn-secondary btn-sm">
+                  Börja om flashcards
+                </button>
+              </div>
             </div>
-            <div class="course-actions">
-              <button id="studyBtn" class="btn btn-primary">Öva</button>
-              <button id="addCardBtn" class="btn btn-secondary">
-                + Nytt flashcard
-              </button>
-              <button id="deleteCourseBtn" class="btn btn-danger">
-                Ta bort mapp
-              </button>
-            </div>
-          </div>
 
-          <div id="cardListContainer">
-            <table class="card-table">
-              <thead>
-                <tr>
-                  <th>Fråga</th>
-                  <th>Svar (text)</th>
-                  <th>Bild?</th>
-                  <th>Åtgärder</th>
-                </tr>
-              </thead>
-              <tbody id="cardList"></tbody>
-            </table>
-            <div id="noCardsMessage" class="empty-state small">
-              <p>Inga flashcards ännu. Skapa ett nytt!</p>
-            </div>
-          </div>
-        </section>
-
-        <!-- STUDYSKÄRM: ett kort i taget -->
-        <section id="studyView" class="study-view hidden">
-          <div class="study-header">
-            <button id="backToCourseBtn" class="btn btn-secondary btn-sm">
-              ← Till mappen
-            </button>
-            <div class="study-info">
-              <span id="studyProgress"></span>
-              <button id="restartStudyBtn" class="btn btn-secondary btn-sm">
-                Börja om flashcards
-              </button>
-            </div>
-          </div>
-
-          <div id="studyCardContainer" class="study-card-container">
-            <div id="studyCard" class="study-card">
-              <div id="studyCardInner" class="study-card-inner">
-                <div class="study-card-face study-card-front">
-                  <div id="studyQuestion" class="study-question"></div>
-                  <div class="study-hint">Tryck för att vända kortet.</div>
-                </div>
-                <div class="study-card-face study-card-back">
-                  <div id="studyAnswerContainer" class="study-answer-container">
-                    <div id="studyAnswerText" class="study-answer-text"></div>
-                    <img
-                      id="studyAnswerImage"
-                      class="study-answer-image hidden"
-                      alt="Svarbild"
-                    />
+            <div id="studyCardContainer" class="study-card-container">
+              <div id="studyCard" class="study-card">
+                <div id="studyCardInner" class="study-card-inner">
+                  <div class="study-card-face study-card-front">
+                    <div id="studyQuestion" class="study-question"></div>
+                    <div class="study-hint">Tryck för att vända kortet.</div>
                   </div>
-                  <div class="study-hint">Tryck för att se frågan igen.</div>
+                  <div class="study-card-face study-card-back">
+                    <div
+                      id="studyAnswerContainer"
+                      class="study-answer-container"
+                    >
+                      <div id="studyAnswerText" class="study-answer-text"></div>
+                      <img
+                        id="studyAnswerImage"
+                        class="study-answer-image hidden"
+                        alt="Svarbild"
+                      />
+                    </div>
+                    <div class="study-hint">Tryck för att se frågan igen.</div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
 
-          <div id="studyFinished" class="study-finished hidden">
-            <h3>Klart!</h3>
-            <p id="studyFinishedText"></p>
-            <button id="studyRestartAllBtn" class="btn btn-primary">
-              Börja om alla flashcards
-            </button>
-          </div>
-        </section>
-      </main>
+            <div id="studyFinished" class="study-finished hidden">
+              <h3>Klart!</h3>
+              <p id="studyFinishedText"></p>
+              <button id="studyRestartAllBtn" class="btn btn-primary">
+                Börja om alla flashcards
+              </button>
+            </div>
+          </section>
+        </main>
+      </div>
     </div>
 
     <!-- Dialog: Ny mapp -->
